try to fix docker